# log-analyzer-mcp

./: .gitignore  AGENTS.md  ANNOUNCEMENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  SPEC.md  finalize.sh  launch-agents.sh  pyproject.toml  server.json  setup.sh
.github/workflows/: demo.yml
codesdevs_log_analyzer/: __init__.py  server.py
log_analyzer_mcp/: __init__.py  models.py  server.py
log_analyzer_mcp/analyzers/: __init__.py  correlator.py  error_extractor.py  pattern_matcher.py  summarizer.py
log_analyzer_mcp/parsers/: __init__.py  apache.py  base.py  docker.py  generic.py  java.py  jsonl.py  kubernetes.py  python_log.py  syslog.py
log_analyzer_mcp/utils/: __init__.py  file_handler.py  formatters.py  time_utils.py
mcp_log_analyzer/: __init__.py  server.py
mcp_log_analyzer/analyzers/: __init__.py
mcp_log_analyzer/parsers/: __init__.py  apache.py  base.py  docker.py  generic.py  java.py  jsonl.py  kubernetes.py  python_log.py  syslog.py
mcp_log_analyzer/utils/: __init__.py  formatters.py
specs/: phase1-infrastructure.md  phase2-parsers.md  phase3-analyzers.md  phase4-server.md  phase5-testing-docs.md
tests/: __init__.py  conftest.py  test_server.py  test_utils.py
tests/test_analyzers/: __init__.py  test_correlator.py  test_error_extractor.py  test_pattern_matcher.py  test_summarizer.py
tests/test_parsers/: test_apache.py  test_docker.py  test_generic.py  test_java.py  test_jsonl.py  test_kubernetes.py  test_python_log.py  test_registry.py  test_syslog.py
