[project]
name = "log-analyzer-mcp"
version = "0.1.0"
description = "MCP server for intelligent log file analysis and debugging assistance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Fathin", email = "fathin@codesdevs.com" }
]
keywords = ["mcp", "log-analysis", "debugging", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
log-analyzer-mcp = "log_analyzer_mcp.server:main"

[project.urls]
Homepage = "https://github.com/codesdevs/log-analyzer-mcp"
Repository = "https://github.com/codesdevs/log-analyzer-mcp"
Issues = "https://github.com/codesdevs/log-analyzer-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["log_analyzer_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "types-python-dateutil>=2.9.0.20251115",
]
